fixed the line height for the movie title put in line breaks instead of spaces changed the wording in some places.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ header{
     border: dashed;
     border-color: rgb(50, 224, 59);
     width: 454px;
+    line-height: 1.5em;
 }
 
 #gameinfo{
